--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="destination" id="yerevan">
                 <h2>Yerevan</h2>
             </div>
+            <div class="destination" id="new-york">
+                <h2>New York</h2>
+            </div>
         </div>
     </div>
 
